# todo_list_cli

./: README.md  projetos.txt  pyproject.toml
src/todo_list_cli/: cli.py  logic.py  todolist.json
