[project]
name = "todo_list_cli"
version = "0.0.0.1"
description = "Basic todo list with cli interaction"
requires-python >= 3.11.4
readme = "README.md"
authors = [
  { name = "Carlos Vinícius Teixeira de Souza", email = "carlosvtsdev@gmail.com" },
  { name = "Rafael do Valle Sollino", email = "computadorduvalli@gmail.com"},
]
dependencies = [
  "tabulate>=0.9.0"
]

[project.urls]
website = "https://example.com"

[project.scripts]
todolist = "todo_list_cli.cli:run"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"